--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
     > #site_footer{
         >div{
-            background-color: blue;
+            background-color: rgb(0, 140, 255);
         }
     }
 }
