--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
         >div{
             background-color: green;
         }
+        >aspee{
+            background-color: aqua;
+        }
     }
 
     > #site_footer{
@@ -15,4 +18,27 @@
             background-color: rgb(0, 140, 255);
         }
     }
+}
+
+:root{
+    --bootfr-darker:rgba(44, 62, 80, 1);
+    --bootfr-light:rgba(26, 188, 156, 1);
+    --bootfr-dark:rgba(58, 84, 109, 1);
+    --bootfr-lighter:rgba(255, 255, 255, 1);
+}
+#site_header{
+    background-color: var(--bootfr-darker);
+}
+.start_bootstrap{
+    background-color: var(--bootfr-light);
+}
+.about{
+    background-color: var(--bootfr-light);
+}
+.info{
+    background-color: var(--bootfr-dark);
+}
+.copyright{
+    background-color: var(--bootfr-darker);
+    color: white;
 }
