--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
     --bootfr-dark:rgba(58, 84, 109, 1);
     --bootfr-lighter:rgba(255, 255, 255, 1);
 }
-
+.white_text{
+    color: white;
+}
 /* debug */
 .debug{
     > #site_header{
